update troller + truck

--- a/Code/view-truck.html
+++ b/Code/view-truck.html
@@ -61,11 +61,6 @@
 
       <div class="view-truck-container">
         <div class="view-truck-viewtruck">
-          <img
-            alt="Rectangle32433"
-            src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/1214ad25-2016-41f2-8f7e-d5d5d1d6ecce/a5285e9b-9b70-49a7-a0f7-388d364661f7?org_if_sml=1785"
-            class="view-truck-rectangle3"
-          />
           <div class="view-truck-icon">
             <img
               alt="Line12433"
@@ -84,13 +79,12 @@
             />
           </div>
           <span class="view-truck-text"><span>UWC 2.0</span></span>
-          <span class="view-truck-text02"><span>Search</span></span>
           <img
             alt="epsetting2433"
             src="public/playground_assets/epsetting2433-0xv.svg"
             class="view-truck-epsetting"
           />
-          <span class="view-truck-text04"><span>Quan</span></span>
+          <span class="view-truck-text02"><span>Quan</span></span>
           <div class="view-truck-add">
             <img
               alt="Ellipse202433"
@@ -135,15 +129,11 @@
             </div>
           </div>
           <img
-            alt="evasearchfill2433"
-            src="public/playground_assets/evasearchfill2433-rk1a.svg"
-            class="view-truck-evasearchfill"
-          />
-          <img
             alt="Rectangle42433"
             src="public/playground_assets/rectangle42433-l9vm-1000h.png"
             class="view-truck-rectangle4"
           />
+          <span class="view-truck-text04"><span>Search Tên or ID</span></span>
           <img
             alt="image22432"
             src="public/playground_assets/image22432-yep4-200h.png"
@@ -590,11 +580,6 @@
                 </div>
               </div>
             </div>
-            <img
-              alt="Ellipse212598"
-              src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/1214ad25-2016-41f2-8f7e-d5d5d1d6ecce/3a0a3d3e-e69f-4614-a16b-8aa80e997ee8?org_if_sml=1634"
-              class="view-truck-ellipse21"
-            />
           </div>
           <span class="view-truck-text75">50</span>
           <span class="view-truck-text76">25</span>
@@ -670,11 +655,31 @@
             src="public/playground_assets/vector2505-qnjo.svg"
             class="view-truck-vector2"
           />
+          <input type="text" class="view-truck-textinput input" />
           <img
-            alt="image22598"
-            src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/1214ad25-2016-41f2-8f7e-d5d5d1d6ecce/f43479f2-1c95-4c76-bdc2-fa738fb646d6?org_if_sml=1199"
-            class="view-truck-image23"
+            alt="evasearchfill2427"
+            src="public/playground_assets/evasearchfill2427-czsh.svg"
+            class="view-truck-evasearchfill"
           />
+          <div class="view-truck-group5">
+            <div class="view-truck-add1">
+              <img
+                alt="Ellipse202432"
+                src="public/playground_assets/ellipse202432-ycjc-200h.png"
+                class="view-truck-ellipse201"
+              />
+              <img
+                alt="Ellipse212432"
+                src="public/playground_assets/ellipse212432-1dhm-200h.png"
+                class="view-truck-ellipse21"
+              />
+            </div>
+            <img
+              alt="image22432"
+              src="public/playground_assets/image22432-agul-200h.png"
+              class="view-truck-image23"
+            />
+          </div>
         </div>
       </div>
     </div>
